Fixed feedback popover on mobile

--- a/src/Main/Main.scss
+++ b/src/Main/Main.scss
@@ -58,4 +58,6 @@
 
 iframe {
     border: none;
+    max-width: 90vw;
+    max-height: 80vh;
 }
